unpackaged/main/default/objects/Contract_Line_Item__c/fields/Annual_Vehicles_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Annual_Vehicles_Profit_Margin__c</fullName>
    <label>Annual Vehicles Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>