unpackaged/main/default/objects/Contract_Line_Item__c/fields/Fuel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Expenses__c</fullName>
    <label>Fuel Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>