unpackaged/main/default/objects/Contract_Line_Item__c/fields/Quote_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>