unpackaged/main/default/objects/Contract_Line_Item__c/fields/Total_Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Fuel_Cost__c</fullName>
    <label>Total Fuel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>