unpackaged/main/default/objects/Contract_Line_Item__c/fields/Vehicle_Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Quote Item</label>
    <referenceTo>ET_Vehicle_Quote_Item__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>